--- a/judypie.html
+++ b/judypie.html
@@ -325,7 +325,7 @@
             <div id="pricing-shampoo-question" class="hidden text-center">
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
                     <button id="btn-shampoo-yes" class="btn-primary">Yes</button>
-                    <button id="btn-shampoo-no" class="btn-primary">No</button>
+                    <button id="btn-shampoo-no" class="btn-secondary">No</button>
                 </div>
                 <button id="back-to-pet-hair-from-shampoo" class="btn-secondary mt-8">Back to Pet Hair</button>
             </div>
@@ -624,7 +624,7 @@
                         <h4 class="pricing-level">Level 1 Detail</h4>
                         <p class="pricing-price">$199</p>
                         <button class="see-whats-included-btn" data-target="booking-suv-truck-level1-features">See what's included</button>
-                        <div id="booking-suv-truck-level1-features" class="feature-dropdown">
+                        <div id="suv-truck-level1-features" class="feature-dropdown">
                             <ul class="feature-list">
                                 <li>External high pressure wash</li>
                                 <li>Tire cleaner</li>
@@ -669,7 +669,7 @@
                         <h4 class="pricing-level">Level 3 Detail</h4>
                         <p class="pricing-price">$399</p>
                         <button class="see-whats-included-btn" data-target="booking-suv-truck-level3-features">See what's included</button>
-                        <div id="booking-suv-truck-level3-features" class="feature-dropdown">
+                        <div id="suv-truck-level3-features" class="feature-dropdown">
                             <ul class="feature-list">
                                 <li>External high pressure wash</li>
                                 <li>Tire cleaner</li>
@@ -985,7 +985,7 @@
                     pricingLevel2Recommendation: document.getElementById('pricing-level2-recommendation'),
                     btnLevel2Yes: document.getElementById('btn-level2-yes'),
                     btnLevel2No: document.getElementById('btn-level2-no'),
-                    pricingLevel1Recommendation: document.getElementById('pricing-level1-recommendation'),
+                    pricingLevel1Recommendation: document.getElementById('btn-level1-recommendation'),
                     btnLevel1Yes: document.getElementById('btn-level1-yes'),
                     btnLevel1No: document.getElementById('btn-level1-no'),
                     pricingFullPackageDetails: document.getElementById('pricing-full-package-details'), // For reference
