--- a/judypie.html
+++ b/judypie.html
@@ -202,9 +202,9 @@
                             <div><label class="form-label">Address</label><input type="text" id="address" class="form-input"></div>
                             <div><label class="form-label">Zip Code</label><input type="text" id="zip_code" class="form-input"></div>
                             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                                <div><label class="form-label">Veh. Year</label><input type="text" id="vehicle_year" class="form-input"></div>
-                                <div><label class="form-label">Veh. Make</label><select id="vehicle_make" class="form-select"><option value="">Select Make</option>${makeOptions}</select></div>
-                                <div><label class="form-label">Veh. Model</label><input type="text" id="vehicle_model" class="form-input"></div>
+                                <div><label class="form-label">Vehicle Year</label><input type="text" id="vehicle_year" class="form-input"></div>
+                                <div><label class="form-label">Vehicle Make</label><select id="vehicle_make" class="form-select"><option value="">Select Make</option>${makeOptions}</select></div>
+                                <div><label class="form-label">Vehicle Model</label><input type="text" id="vehicle_model" class="form-input"></div>
                             </div>
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                                 <div><label class="form-label">Package</label><input type="text" id="package_type" class="form-input bg-gray-100" value="${state.package_type || ''}" readonly></div>
