--- a/judypie.html
+++ b/judypie.html
@@ -92,7 +92,7 @@
             pricingShampoo: "Would you like your seats and carpets shampooed?",
             pricingLevel2Rec: (price) => `Based on your answers, I recommend our most popular option, the Level 2 Detail. It includes a full interior and exterior cleaning with shampoo for just $${price}. Does that sound good?`,
             pricingLevel1Rec: (price) => `Okay, in that case I'd recommend our Level 1 Detail. It's a thorough interior and exterior cleaning for just $${price}. Does that sound good?`,
-            schedulingVehicleType: "Excellent! To schedule, what type of vehicle is it?",
+            schedulingVehicleType: "Excellent! To schedule, what type of vehicle is it? Is it a car, truck or an SUV?",
             packageSelection: "Please select a package for the customer.",
             bookingForm: "Perfect. Please provide the customer's details to find an appointment.",
             paymentOptions: "Your appointment is almost confirmed! We have two payment options. You can pay a $50 deposit now and the remainder after the service is complete, or you can choose to pay in full, which do you prefer?",
