--- a/judypie.html
+++ b/judypie.html
@@ -92,7 +92,7 @@
             pricingShampoo: "Would you like your seats and carpets shampooed?",
             pricingLevel2Rec: (price) => `Based on your answers, I recommend our most popular option, the Level 2 Detail. It includes a full interior and exterior cleaning with shampoo for just $${price}. Does that sound good?`,
             pricingLevel1Rec: (price) => `Okay, in that case I'd recommend our Level 1 Detail. It's a thorough interior and exterior cleaning for just $${price}. Does that sound good?`,
-            schedulingVehicleType: "Excellent! To schedule, what type of vehicle is it? Is it a car, truck or an SUV?",
+            schedulingVehicleType: "Excellent! To schedule, what type of vehicle is it?",
             packageSelection: "Please select a package for the customer.",
             bookingForm: "Perfect. Please provide the customer's details to find an appointment.",
             paymentOptions: "Your appointment is almost confirmed! We have two payment options. You can pay a $50 deposit now and the remainder after the service is complete, or you can choose to pay in full, which do you prefer?",
@@ -202,9 +202,9 @@
                             <div><label class="form-label">Address</label><input type="text" id="address" class="form-input"></div>
                             <div><label class="form-label">Zip Code</label><input type="text" id="zip_code" class="form-input"></div>
                             <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                                <div><label class="form-label">Vehicle Year</label><input type="text" id="vehicle_year" class="form-input"></div>
-                                <div><label class="form-label">Vehicle Make</label><select id="vehicle_make" class="form-select"><option value="">Select Make</option>${makeOptions}</select></div>
-                                <div><label class="form-label">Vehicle Model</label><input type="text" id="vehicle_model" class="form-input"></div>
+                                <div><label class="form-label">Veh. Year</label><input type="text" id="vehicle_year" class="form-input"></div>
+                                <div><label class="form-label">Veh. Make</label><select id="vehicle_make" class="form-select"><option value="">Select Make</option>${makeOptions}</select></div>
+                                <div><label class="form-label">Veh. Model</label><input type="text" id="vehicle_model" class="form-input"></div>
                             </div>
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                                 <div><label class="form-label">Package</label><input type="text" id="package_type" class="form-input bg-gray-100" value="${state.package_type || ''}" readonly></div>
